# rover-software

./: .cproject  ADCDriver.py  ADCTest.py  ADCTest2.py  ADS1x15.py  Adafruit_I2C.py  AntennaAim.py  ArmClient.py  ArmServer.py  Box.py  Button.py  CameraClient.py  CameraServer.py  Communication.py  Controller.py  ControllerTest.py  DriveClient.py  DriveServer.py  DriveServerSabertooth.py  DriverServer.py  GPSClient.py  GPSServer.py  GPSTest.py  GUI.py  GUIControllerTest.py  GUImastWork.py  IMU.py  Indicator.py  Kangaroo.py  LEDCommsClient.py  LEDCommsServer(Raspi).py  LICENSE.md  LSM303.py  LinearActulatorMath.py  MPU.py  MPU6050.py  MastClient.py  MastServer.py  MessageProtocol.txt  MotorController.py  (+28 more)
AutoLevel/: gyroCamera.py
CPP/: .cproject  .project  Sensor.h
GUI/: .project  Button.py  Communication.py  Controller.py  ControllerTest.py  GUI.py  GetTextCursorWithoutTroubleShooting.py  MessageProtocol.txt  ServoDriver.py  ardmonitor.py  gui.py  streamRecv
Java/: .classpath  .project
RPi.GPIO-0.4.1a/: distribute-0.6.27-py2.7.egg
RoverPCL/trunk/: .cproject  .project  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  openni_grabber  refreshCMake
RoverPCL/trunk/src/: downsample.cpp  extract_indices.cpp  jsonTest.cpp  merge.cpp  openni_grabber.cpp  pairwise_incremental_registration.cpp  stream.cpp
USSTRoverGUI/: Button.py  GetTextCursorWithoutTroubleShooting.py  Textbox.py  communication.py  controller.py  pcClient2.py  svn-commit.tmp  testSender  testgui.py
db/: uuid
embedModules/: README.md
final/: ArmClient.py  Box.py  Button.py  CameraServer.py  ControllerTest.py  DriveClient.py  GPSClient.py  MPU6050.py  (+5 more)
(+151 files in other folders)
